<resources>
    <string name="app_name">RetroArch</string>
    <string name="input_method">Input Method</string>
    <string name="file_type_icon">File type icon</string>
    <string name="key_bind_title">Select the button to use</string>
    <string name="key_bind_clear">Unbind</string>
    <string name="key_bind_detect">Detect</string>
    <string name="optimal_settings_device">Optimal device settings</string>
    <string name="extracting_assets_please_wait_">Extracting assets, please wait …</string>
    <string name="mainmenu_title">RetroArch - Main Menu</string>
    <string name="resume_content">Load RetroArch</string>
    <string name="load_core">Load Core</string>
    <string name="load_content">Load Content</string>
    <string name="load_content_auto">Load Content (Detect Core)</string>
    <string name="load_content_history">Load Content (History)</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="quit_retroarch">Quit RetroArch</string>
    <string name="select_libretro_core">Select a libretro core</string>
    <string name="installed_cores">Installed Cores</string>
    <string name="uninstall_core">Uninstall Core</string>
    <string name="uninstall_core_message">Would you like to uninstall %1$s?</string>
    <string name="uninstall_failure">Failed to uninstall core: %1$s.</string>
    <string name="uninstall_success">Successfully uninstalled core: %1$s.</string>
    <string name="downloadable_cores">Downloadable Cores</string>
    <string name="core_info_displayNameTitle">Display Name</string>
    <string name="core_info_internalNameTitle">Internal Name</string>
    <string name="core_info_systemNameTitle">Description</string>
    <string name="core_info_author">Author(s)</string>
    <string name="core_info_licenseTitle">Core License</string>
    <string name="core_info_manufacturer">Manufacturer</string>
    <string name="core_info_permissions">Permissions</string>
    <string name="download_core_confirm_title">Confirm</string>
    <string name="download_core_confirm_msg">Are you sure you want to download %1$s?</string>
    <string name="downloading_msg">Downloading %1$s…</string>
    <string name="download_core_list_error">Error retrieving list of cores.</string>
    <string name="downloadable_cores_ctx_title">Actions</string>
	<string name="downloadable_cores_ctx_goto_wiki">Go to core wiki page</string>
    <string name="refresh_rate_calibration">Refresh rate calibration</string>
    <string name="touch_screen_with_fingers">Touch the screen with your fingers for more accurate measurements.</string>
    <string name="refresh_rate_measured_to">Refresh rate measured to: %1$s Hz.</string>
    <string name="loading_gamepath">Loading [%1$s]…</string>
    <string name="current_binding">Current: %1$s</string>
    <string name="press_key_to_use">Press key to use</string>
    <string name="multiple_cores_detected">Multiple cores detected</string>
    <string name="no_cores_detected">No supported cores detected</string>
    <string name="welcome_to_retroarch">Welcome to RetroArch</string>
    <string name="welcome_to_retroarch_desc">This is your first time starting up RetroArch. RetroArch will now be preconfigured for the best possible user experience.</string>
    <string name="gpl_waiver">GPL waiver</string>
    <string name="gpl_waiver_desc">Copyright © 2010–2014 RetroArch Team.\n\nThis program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 3 of the License, or (at your option) any later version.\n\nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.\n\nYou should have received a copy of the GNU General Public License along with this program; if not, see www.gnu.org/licenses.\n\nAdditional permission under GNU GPL version 3 section 7\n\nIf you modify this Program, or any covered work, by linking or combining it with any non-GPL libretro core, containing parts covered by the terms of the core\'s license, the licensors of this Program grant you additional permission to convey the resulting work.</string>
    <string name="detect_device_msg_ouya">The ideal configuration options for your device will now be preconfigured.\n\nNOTE: For optimal performance, turn off Google Account sync, GPS and Wi-Fi in your Android settings menu.</string>
    <string name="detect_device_msg_general">The ideal configuration options for your device will now be preconfigured.\n\nNOTE: For optimal performance, turn off Google Account sync, Google Play Store auto-updates, GPS and Wi-Fi in your Android settings menu.</string>
    <string name="nvidia_shield_detected">NVidia Shield detected</string>
    <string name="game_mid_detected">GameMID detected</string>
    <string name="ouya_detected">OUYA detected</string>
    <string name="xperia_play_detected">Xperia Play detected</string>
    <string name="nexus_7_2013_detected">Nexus 7 2013 detected</string>
    <string name="no_optimal_settings">Device either not detected in list or doesn\'t have any optimal settings in our database.</string>
    <string name="load_a_core_first">Go to \'Load Core\' and select a core first.</string>
    <string name="loading_data">Loading [%1$s]…</string>
    <string name="asset_extraction">Asset Extraction</string>
    <string name="keep_cores">Keep cores</string>
    <string name="remove_cores">Remove non-GPL cores</string>
    <string name="using_os_reported_refresh_rate">Using OS-reported refresh rate of: %1$s Hz.</string>
    <string name="quit">Quit</string>
    <string name="gui_toggle">GUI toggle</string>
    <string name="menu_toggle">Menu toggle</string>
    <string name="audio_options">Audio</string>
    <string name="enable_audio">Enable audio</string>
    <string name="dynamic_rate_control">Dynamic rate control</string>
    <string name="dynamic_rate_control_desc">Enable dynamic rate control (recommended).</string>
    <string name="audio_latency">Audio latency</string>
    <string name="audio_latency_desc">Set the amount of desired audio latency. Your mileage may vary on the device you are using.</string>
    <string name="auto_audio_latency">Automatically detect audio latency</string>
    <string name="auto_audio_latency_desc">Use automatic audio latency detection. Only available for Android 4.1 and up - your mileage may vary based on the device you are using.</string>
    <string name="sixty_four_ms">64ms (Low)</string>
    <string name="ninety_six_ms">96ms (Medium)</string>
    <string name="one_twenty_eight_ms">128ms (Medium)</string>
    <string name="one_sixty_ms">160ms (High)</string>
    <string name="input_options">Input</string>
    <string name="back_behavior">Back behavior</string>
    <string name="back_behavior_desc">Select how you want the Back button to behave.</string>
    <string name="ime">IME</string>
    <string name="ime_method">Set Input Method</string>
    <string name="ime_method_desc">Sets IME to be used in-game.</string>
    <string name="config_autodetect">Configuration autodetection</string>
    <string name="config_autodetect_desc">This will attempt to preconfigure various gamepads and/or IME apps that you connect.</string>
    <string name="rom_paths">ROM paths</string>
    <string name="rom_directory">ROM directory</string>
    <string name="rom_directory_desc">Sets directory where ROM browser will first browse for ROM files.</string>
    <string name="save_files">Save files</string>
    <string name="enable_custom_dir">Enable custom directory</string>
    <string name="savefiles_custom_dir">Enables use of custom save file folder. (.srm) save files will be saved and loaded to configured directory. If not enabled, save files will reside in ROM folder.</string>
    <string name="savefile_directory">Savefile directory</string>
    <string name="savefile_directory_desc">Sets directory where to save and load game save files.</string>
    <string name="save_states">Save states</string>
    <string name="save_state_directory">Save state directory</string>
    <string name="save_state_directory_desc">Sets directory where to save and load game save states.</string>
    <string name="system">System</string>
    <string name="system_custom_dir">Enables use of custom system folder. Cores will look for system specific files, like BIOSes, in this folder. If not enabled, it will look in the ROM folder.</string>
    <string name="system_directory">System directory</string>
    <string name="system_directory_desc">Sets directory where system files are loaded from.</string>
    <string name="core_management">Core Management</string>
    <string name="manage_cores">Manage Cores</string>
    <string name="config_style">Configuration style</string>
    <string name="global_config">Global configuration</string>
    <string name="global_config_desc">Enable global settings for all cores. Leave disabled if you want per-core settings.</string>
    <string name="auto_load_state">Auto load state</string>
    <string name="auto_load_state_desc">Loads an automatically created savestate (*.state.auto) at startup.</string>
    <string name="auto_save_state">Auto save state</string>
    <string name="auto_save_state_desc">Automatically saves state (*.state.auto) when exiting game.</string>
    <string name="rewinding">Rewinding</string>
    <string name="rewinding_desc">Enable real-time rewinding of gameplay. (WARNING: Very CPU intensive - will decrease ingame performance by a lot - only use this option on a powerful device).</string>
    <string name="rewind_granularity">Rewind Granularity</string>
    <string name="rewind_granularity_desc">Number of frames to rewind at a time.</string>
    <string name="vsync">VSync</string>
    <string name="vsync_desc">When set to enabled, prevents screen tearing.</string>
    <string name="auto_rotate">Auto-rotate</string>
    <string name="auto_rotate_desc">Will auto-rotate the screen for vertically oriented games.</string>
    <string name="scale_integer">Scale integer</string>
    <string name="scale_integer_desc">Scales video only in whole steps of game resolution. Useful when playing without bilinear filtering.</string>
    <string name="aspect_ratio">Aspect ratio</string>
    <string name="aspect_ratio_desc">Aspect ratio to enforce.</string>
    <string name="synchronization">Synchronization</string>
    <string name="threaded_video_driver">Threaded video driver</string>
    <string name="threaded_video_driver_desc">Uses a multi-threaded video driver. Is likely to improve performance at the expense of slightly more latency and jitter. Use this if you have troubles getting good video and audio.</string>
    <string name="forced_refresh_rate">Forced refresh rate (Hz)</string>
    <string name="forced_refresh_rate_desc">Force a specific refresh rate to be detected. Only set manually if calibration reports wrong refresh rate.</string>
    <string name="calibrate_refresh_rate">Calibrate refresh rate</string>
    <string name="calibrate_refresh_rate_desc">Attempts to find the true refresh rate of monitor. Updates value in \'Force refresh rate (Hz)\' option. To help ensure accuracy, make sure no intense background services are running, and avoid triggering screensaver.</string>
    <string name="set_os_reported_refresh_rate">Set OS-reported refresh rate</string>
    <string name="set_os_reported_refresh_rate_desc">Sets refresh rate equal to OS-reported value. This might not be accurate for your device.</string>
    <string name="fonts">Fonts</string>
    <string name="onscreen_fonts">On-screen fonts</string>
    <string name="onscreen_fonts_desc">Enable rendering of on-screen fonts for messages.</string>
    <string name="enable">Enable</string>
    <string name="general">General</string>
</resources>