<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

        <!-- General -->
        <PreferenceCategory android:title="@string/general" >
            <ListPreference
                android:entries="@array/aspect_ratios"
                android:entryValues="@array/aspect_values"
                android:defaultValue="auto"
                android:key="video_aspect_ratio"
                android:summary="@string/aspect_ratio_desc"
                android:title="@string/aspect_ratio" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="video_vsync"
                android:summary="@string/vsync_desc"
                android:title="@string/vsync" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="video_allow_rotate"
                android:summary="@string/auto_rotate_desc"
                android:title="@string/auto_rotate" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="video_scale_integer"
                android:summary="@string/scale_integer_desc"
                android:title="@string/scale_integer" />
        </PreferenceCategory>

        <!-- Synchronization -->
        <PreferenceCategory android:title="@string/synchronization" >
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="video_threaded"
                android:summary="@string/threaded_video_driver_desc"
                android:title="@string/threaded_video_driver" />
            <EditTextPreference
                android:key="video_refresh_rate"
                android:numeric="decimal"
                android:summary="@string/forced_refresh_rate_desc"
                android:title="@string/forced_refresh_rate" />
            <Preference
                android:summary="@string/calibrate_refresh_rate_desc"
                android:title="@string/calibrate_refresh_rate" >
                <intent
                    android:targetClass="com.retroarch.browser.DisplayRefreshRateTest"
                    android:targetPackage="com.retroarch" />
            </Preference>
            <Preference
                android:key="set_os_reported_ref_rate_pref"
                android:summary="@string/set_os_reported_refresh_rate_desc"
                android:title="@string/set_os_reported_refresh_rate" />
        </PreferenceCategory>

        <!-- Fonts -->
        <PreferenceCategory android:title="@string/fonts">
            <CheckBoxPreference android:title="@string/onscreen_fonts"
                android:summary="@string/onscreen_fonts_desc"
                android:key="video_font_enable"
                android:defaultValue="true"/>
        </PreferenceCategory>
    </PreferenceScreen>
