<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/key_bind_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/key_bind_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/key_bind_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/key_bind_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/key_bind_title"
        android:layout_below="@+id/key_bind_title"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <ListView
        android:id="@+id/key_bind_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/key_bind_clear"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/key_bind_value"
        android:entries="@array/key_bind_values"
        android:fastScrollEnabled="true" >

    </ListView>

    <Button
        android:id="@+id/key_bind_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/key_bind_detect"
        android:text="@string/key_bind_clear" />

    <Button
        android:id="@+id/key_bind_detect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/key_bind_list"
        android:layout_marginRight="72dp"
        android:text="@string/key_bind_detect" />

</RelativeLayout>